chore: shorten author name to Gellish

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "zero-reload",
         "performance"
     ],
-    "author": "Gellish Garner Mangubat",
+    "author": "Gellish",
     "license": "Apache-2.0",
     "bugs": {
         "url": "https://github.com/Gellish/MicroFramework/issues"
